--- a/index.html
+++ b/index.html
@@ -10,29 +10,52 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
+
+
+
 <body>
+
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Automobile Maintenance</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">Promotion</a></li>
+        <li><a href="sass.html">Service</a></li>
+        <li><a href="badges.html">About us</a></li>
+        <li><a href="collapsible.html">Login</a></li>
       </ul>
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
+  
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+
     </div>
   </nav>
+
+
+
+
+
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Starter Template</h1>
+      <h1 class="header center orange-text">Automobile Maintenance</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <h5 class="header col s12 light">All new Automobile Maintenance System first in the World!</h5>
       </div>
-      <div class="row center">
+      <!--<div class="row center"> 
         <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
-      </div>
+      </div>-->
+
+
+
+
+
+
+
+
+
+
+
+
       <br><br>
 
     </div>
@@ -50,7 +73,12 @@
             <h5 class="center">Speeds up development</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <div class="row center"> 
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Promotion</a>
+      </div>
+
           </div>
+
         </div>
 
         <div class="col s12 m4">
@@ -59,6 +87,9 @@
             <h5 class="center">User Experience Focused</h5>
 
             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <div class="row center"> 
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Service</a>
+      </div>
           </div>
         </div>
 
@@ -68,6 +99,9 @@
             <h5 class="center">Easy to work with</h5>
 
             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <div class="row center"> 
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">About us</a>
+      </div>
           </div>
         </div>
       </div>
@@ -115,6 +149,10 @@
       </div>
     </div>
   </footer>
+
+
+
+
 
 
   <!--  Scripts-->
