--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Automobile Maintenance</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Automobile Maintenance</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Promotion</a></li>
-        <li><a href="sass.html">Service</a></li>
-        <li><a href="badges.html">About us</a></li>
-        <li><a href="collapsible.html">Login</a></li>
+        <li><a href="promotion.html">Promotion</a></li>
+        <li><a href="service.html">Service</a></li>
+        <li><a href="aboutus.html">About us</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
 
   
@@ -118,34 +118,18 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Automobile Maintenance System</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students making the Automobile Maintenance System.</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
+        
+        
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="orange-text text-lighten-3" href="#">IT KMITL</a>
       </div>
     </div>
   </footer>
