--- a/aboutus.html
+++ b/aboutus.html
@@ -47,22 +47,152 @@
     </div>
   </div>
 
+
+
+
 <div class="row">
-<div class="container">
-opor
+  <div class="col s2">
+  </div>
+  <div class="col s4">
+    <img height="400"   class="responsive-img" src="images/car1.jpeg">
+  </div>
+  <div class="col s1">
+  </div>
+  <div class="col s4">
+    <img height="400" class="responsive-img" src="images/car2.jpeg">
+  </div>
+  <div class="col s1">
+  </div>
+
+
 </div>
+
+
+
+
+
+<div class="row">
+  <div class="col s2">
+  </div>
+  <div class="col s4">
+    <img height="400"  class="responsive-img" src="images/car2.jpeg">
+  </div>
+  <div class="col s1">
+  </div>
+  <div class="col s4">
+    <img height="400"  class="responsive-img" src="images/car1.jpeg">
+  </div>
+  <div class="col s1">
+  </div>
+
+
 </div>
 
 
 
 
+<div class="row">
+  <div class="col s1">
+  </div>
+<div class="col s10">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Mr. Jitpanu TanThong
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div> 
 
 
-        
+       <div class="row">
+  <div class="col s1">
+  </div>
+<div class="col s10">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Mr. Wirun Numjaidee
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div> 
+
+
+
+
+       <div class="row">
+  <div class="col s1">
+  </div>
+<div class="col s10">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Mr. Preeyarud SL
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div> 
+
+
+
+       <div class="row">
+  <div class="col s1">
+  </div>
+<div class="col s10">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Mr. Nuttida Manruksa
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div> 
       
 
 
-
+<div class="row">
+  <div class="col s1">
+  </div>
+<div class="col s10">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                Mr. Anuchita Mucchima
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div> 
 
 
   
