--- a/review.html
+++ b/review.html
@@ -80,7 +80,7 @@
 
 <div class="row center">
       
-      <a href="register.html" id="download-button" class="btn-large waves-effect waves-light orange">Submit</a>
+      <a id="download-button" class="btn-large waves-effect waves-light orange">Submit</a>
       
 
 </div>
