--- a/aboutus.html
+++ b/aboutus.html
@@ -118,11 +118,11 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+              <img width="100" src="images/wiroon.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text">
-                Mr. Wirun Numjaidee
+                Mr. Wiroon Namjaidee
               </span>
             </div>
           </div>
@@ -140,11 +140,11 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+              <img width="100" src="images/preeyarat.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text">
-                Mr. Preeyarud SL
+                Ms. Preeyarat Seelid
               </span>
             </div>
           </div>
@@ -161,11 +161,11 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+              <img width="100" src="images/natthida.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text">
-                Mr. Nuttida Manruksa
+                Ms. Natthida Manraksa
               </span>
             </div>
           </div>
@@ -182,11 +182,11 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img width="100" src="images/jitpanu.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
+              <img width="100" src="images/anuchita.jpg" alt="" class="circle responsive-img> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text">
-                Mr. Anuchita Mucchima
+                Ms. Anuchita Matchima
               </span>
             </div>
           </div>
