--- a/emp_mec_num1.html
+++ b/emp_mec_num1.html
@@ -18,6 +18,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Automobile Maintenance</a>
       <ul class="right hide-on-med-and-down">
+      <li><a href="emp_mec_index.html">Main</a></li>
         <li><a href="#">Logout</a></li>
         
       </ul>
