--- a/emp_mec_updaterepair.html
+++ b/emp_mec_updaterepair.html
@@ -122,7 +122,7 @@
     </div>
 <div class="row center">
       
-      <a href="emp_mec_updaterepair.html" id="download-button" class="btn-large waves-effect waves-light orange">submit </a>
+      <a href="emp_mec_index.html" id="download-button" class="btn-large waves-effect waves-light orange">submit </a>
       
 
           </div>
