--- a/aboutus.html
+++ b/aboutus.html
@@ -39,9 +39,7 @@
       <br><br>
       <h1 class="header center orange-text">About us</h1>
       <div class="row center">
-      Automobile Maintenance System ทำขึ้นเพื่อ................... กิ้กิ้
-
-
+      Automobile Maintenance System เป็นระบบที่จัดทำขึ้นเพื่อเป็นตัวกลางสื่อสารระหว่างอู่ซ่อมรถกับลูกค้า เพื่อความสะดวก รวดเร็ว ในการนำรถเข้าใช้บริการซ่อมในอู่ซ่อมรถ
       <br><br>
 
     </div>
