--- a/index.html
+++ b/index.html
@@ -73,13 +73,10 @@
           </div>
         <div class="col s4">
           <div class="icon-block">
-<<<<<<< HEAD
-          <img class="responsive-img" src="promotion.jpg">
             <h2 class="center light-blue-text"> 
-=======
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Promotions</h5>
->>>>>>> origin/master
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
 
            <!-- <h5 class="center">Speeds up development</h5>
 
